<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_64sdp"
            android:contentDescription="@null"
            android:src="@drawable/ills_auth_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/AuthHeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/forgotPasswordHead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pic" />

        <TextView
            android:id="@+id/body"
            style="@style/AuthBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="start"
            android:text="@string/forgotPasswordBody"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/loginEmail"
            app:layout_constraintEnd_toEndOf="@id/body"
            app:layout_constraintStart_toStartOf="@id/body"
            app:layout_constraintTop_toBottomOf="@+id/body">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/set_focus_email"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/el_messiri_medium"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@drawable/set_focus_toggle"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@id/emailLayout"
            app:layout_constraintStart_toStartOf="@id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/set_focus_password"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/el_messiri_medium"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPasswordF"
            app:endIconMode="password_toggle"
            app:endIconTint="@drawable/set_focus_toggle"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@id/passwordLayout"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/set_focus_password"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/el_messiri_medium"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updatePassword"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/emailLayout"
            app:layout_constraintStart_toStartOf="@+id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>